<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lugares</string>
    <string name="action_configuraciones">Configuraciones</string>
    <string name="action_nuevo_lugar">Nuevo lugar</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_buscar_hint">Buscar favorito</string>
    <string name="action_guardar">Guardar</string>
    <string name="action_refrescar">Refrescar</string>
    <string name="action_borrar">Borrar</string>
    <string name="action_modificar">Modificar</string>
    <string name="action_ver">Ver</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_activity_manto">AgregarActivity</string>
    <string name="title_activity_visualizador">Visualizar</string>
    <string name="noFavorito">Aún no tienes ningún favorito</string>
    <string name="lblDireccionAprox">Dirección aproximada</string>
    <string name="txvContenidoExtra">Contenido extra</string>
    <string name="edtTituloHint">Título</string>
    <string name="txtAdjuntar">Adjuntar</string>
    <string name="txtFoto">Foto</string>
    <string name="txtAudio">Audio</string>
    <string name="txtVideo">Video</string>
    <string name="txtCargando">Cargando...</string>
    <string name="txtTitulo">Título</string>
    <string name="nullText"></string>
    <string name="title_activity_mostrar_imagen">MostrarImagenActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_mostrar_video">MostrarVideoActivity</string>

</resources>
