<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_configuraciones"/>
    -->
    
    <item 
        android:id="@+id/itmNuevoLugar" 
        android:title="@string/action_nuevo_lugar" 
        android:icon="@drawable/ic_content_new"
        app:showAsAction="always">
    </item>
    
    <item
	    android:id="@+id/itmMenuSearch"
	    android:icon="@drawable/ic_action_search"
	    app:actionViewClass="android.support.v7.widget.SearchView"
	    app:showAsAction="ifRoom|collapseActionView"
	    android:queryHint="@string/action_buscar_hint"
	    android:title="@string/action_buscar" >
    </item>
    
</menu>
